Bug 609284 - Support drag and drop local files from sources which use text/uri-list. r=enn